examples/v0.9/errors/duplicate_import.nova
import greet from modules.greetings

import greet from modules.greetings